# Fetch-Uniswap-Pools

./: .gitignore  Cargo.toml  README.md
src/: main.rs  pools.rs  use_amm.rs
